Cleaned up and got working again
Removed some CSS and Angular directives to work with later

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
 	font-family: 'Cantora One', sans-serif;
+	/* Play with this later	
 	background-color: #980000;
-	color: #F8F3BC;
+	color: #F8F3BC;*/
 }
 
 .pleaseWait {
